feat(compat): port base fabric and forge builds to minecraft 1.20.1