@@ -2,12 +2,12 @@ package top.skyeyefast.mchjong.recipe;
 
 import java.util.ArrayList;
 import java.util.List;
-import net.minecraft.core.HolderLookup;
+import net.minecraft.core.RegistryAccess;
 import net.minecraft.world.item.DyeItem;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.item.crafting.CraftingBookCategory;
-import net.minecraft.world.item.crafting.CraftingInput;
+import net.minecraft.world.inventory.CraftingContainer;
 import net.minecraft.world.item.crafting.CustomRecipe;
 import net.minecraft.world.item.crafting.RecipeSerializer;
 import net.minecraft.world.level.Level;
@@ -34,25 +34,25 @@ public final class SupplyCraftingRecipe extends CustomRecipe {
             Items.COPPER_INGOT, Items.HOPPER, Items.COPPER_INGOT);
     }
 
-    public SupplyCraftingRecipe(CraftingBookCategory category, Operation operation) {
-        super(category);
+    public SupplyCraftingRecipe(net.minecraft.resources.ResourceLocation id, CraftingBookCategory category, Operation operation) {
+        super(id, category);
         this.operation = operation;
     }
 
-    @Override public boolean matches(CraftingInput input, Level level) { return !result(input).isEmpty(); }
-    @Override public ItemStack assemble(CraftingInput input, HolderLookup.Provider registries) { return result(input); }
+    @Override public boolean matches(CraftingContainer input, Level level) { return !result(input).isEmpty(); }
+    @Override public ItemStack assemble(CraftingContainer input, RegistryAccess registries) { return result(input); }
     @Override public boolean canCraftInDimensions(int width, int height) {
         return operation == Operation.UPGRADE_TABLE ? width >= 3 && height >= 3 : width * height >= 2;
     }
     @Override public RecipeSerializer<?> getSerializer() { return MahjongRecipes.CRAFTING.get(operation); }
 
-    private ItemStack result(CraftingInput input) {
+    private ItemStack result(CraftingContainer input) {
         if (operation == Operation.UPGRADE_TABLE) return upgrade(input);
         List<ItemStack> items = new ArrayList<>();
-        for (int i = 0; i < input.size(); i++) if (!input.getItem(i).isEmpty()) items.add(input.getItem(i));
+        for (int i = 0; i < input.getContainerSize(); i++) if (!input.getItem(i).isEmpty()) items.add(input.getItem(i));
         if (operation == Operation.MARK_STICK) return markSticks(items);
         if (items.size() != 2) return ItemStack.EMPTY;
-        ItemStack first = items.getFirst(), second = items.getLast();
+        ItemStack first = items.get(0), second = items.get(items.size() - 1);
         for (int order = 0; order < 2; order++) {
             ItemStack target = order == 0 ? first : second;
             ItemStack reagent = order == 0 ? second : first;
@@ -64,7 +64,7 @@ public final class SupplyCraftingRecipe extends CustomRecipe {
                         && data.valid() && data.red() != red && (data.face() == 4 || data.face() == 13 || data.face() == 22)
                         && reagent.is(red ? MahjongContent.RED_DORA_DYE : MahjongContent.UNDO_DYE)) {
                         var result = target.copyWithCount(1);
-                        result.set(MahjongComponents.TILE, data.engraved(data.face(), red));
+                        MahjongComponents.tile(result, data.engraved(data.face(), red));
                         return result;
                     }
                 }
@@ -84,7 +84,7 @@ public final class SupplyCraftingRecipe extends CustomRecipe {
         int blanks = 0, points = 0;
         for (ItemStack stack : items) {
             if (stack.is(MahjongContent.POINT_STICK)) {
-                if (stack.getOrDefault(MahjongComponents.POINTS, 0) != 0 || !MahjongSupplies.storable(stack)) return ItemStack.EMPTY;
+                if (MahjongComponents.points(stack) != 0 || !MahjongSupplies.storable(stack)) return ItemStack.EMPTY;
                 blanks++;
             } else {
                 if (points != 0) return ItemStack.EMPTY;
@@ -94,22 +94,20 @@ public final class SupplyCraftingRecipe extends CustomRecipe {
         }
         if (blanks != 8 || points == 0) return ItemStack.EMPTY;
         ItemStack result = new ItemStack(MahjongContent.POINT_STICK, 8);
-        result.set(MahjongComponents.POINTS, points);
+        MahjongComponents.points(result, points);
         return result;
     }
 
-    private ItemStack upgrade(CraftingInput input) {
-        if (input.width() != 3 || input.height() != 3) return ItemStack.EMPTY;
+    private ItemStack upgrade(CraftingContainer input) {
+        if (input.getWidth() != 3 || input.getHeight() != 3) return ItemStack.EMPTY;
         var required = upgradePattern();
         for (int i = 0; i < 9; i++) if (!input.getItem(i).is(required.get(i))) return ItemStack.EMPTY;
         ItemStack table = input.getItem(4);
         // Furniture drops its removable contents separately; loaded creative stacks are not consumed.
-        if (table.has(net.minecraft.core.component.DataComponents.CONTAINER)
-            || table.has(net.minecraft.core.component.DataComponents.BLOCK_ENTITY_DATA)) return ItemStack.EMPTY;
+        if (MahjongSupplies.hasStorage(table)) return ItemStack.EMPTY;
         ItemStack result = new ItemStack(MahjongContent.AUTO_TABLE_ITEM);
-        result.set(MahjongComponents.WOOD, table.getOrDefault(MahjongComponents.WOOD, FurnitureWood.OAK));
-        var name = table.get(net.minecraft.core.component.DataComponents.CUSTOM_NAME);
-        if (name != null) result.set(net.minecraft.core.component.DataComponents.CUSTOM_NAME, name);
+        MahjongComponents.wood(result, MahjongComponents.wood(table));
+        if (table.hasCustomHoverName()) result.setHoverName(table.getHoverName());
         return result;
     }
 }
